--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>湖口工作站3D視覺化輔助決策平台</title>
-  <link rel="stylesheet" href="https://js.arcgis.com/4.33/esri/themes/dark/main.css"/>
+  <link rel="stylesheet" href="https://js.arcgis.com/4.33/esri/themes/light/main.css"/>
   <script src="https://js.arcgis.com/4.33/"></script>
   <link rel="stylesheet" href="style.css">
   <style>
@@ -18,7 +18,6 @@
       height: 100vh;
       display: flex;
       flex-direction: column;
-      background: #1a1a1a;
     }
 
     .header {
@@ -27,9 +26,11 @@
       flex-direction: row;
       align-items: stretch;
       min-height: 44px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.3);
-      background: #1a1a1a;
-      border-bottom: 1px solid #333;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.08);
+      background: #2c3e50;
+      /* --- 修改處 --- */
+      position: relative; 
+      z-index: 1001;      
     }
 
     .home-link-wrap {
@@ -47,10 +48,10 @@
       z-index: 2;
     }
     .home-link-wrap:hover {
-      background: #404040;
+      background: #b2b2b2;
     }
     .home-link {
-      color: #e0e0e0;
+      color: white;
       text-decoration: none;
       font-size: 18px;
       font-weight: 500;
@@ -66,12 +67,12 @@
       transition: color 0.2s;
     }
     .home-link-wrap:hover .home-link {
-      color: #ffffff;
+      color: #222;
     }
 
     .header-title {
       flex: 1;
-      color: #e0e0e0;
+      color: white;
       font-size: 20px;
       font-weight: 600;
       letter-spacing: 1px;
@@ -88,7 +89,6 @@
     #viewDiv {
       flex: 1;
       min-height: 0;
-      background: #1a1a1a;
     }
   </style>
 </head>
