--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       align-items: stretch;
       min-height: 44px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.08);
-      background: #2c3e50;
+      background: #323232;
       /* --- 修改處 --- */
       position: relative; 
       z-index: 1001;      
