--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>湖口工作站3D視覺化輔助決策平台</title>
-  <link rel="stylesheet" href="https://js.arcgis.com/4.33/esri/themes/light/main.css"/>
+  <link rel="stylesheet" href="https://js.arcgis.com/4.33/esri/themes/dark/main.css"/>
   <script src="https://js.arcgis.com/4.33/"></script>
   <link rel="stylesheet" href="style.css">
   <style>
@@ -34,9 +34,9 @@
     }
 
     .home-link-wrap {
-      min-width: 100px;
+      min-width: 60px;
       max-width: 180px;
-      width: 120px;
+      width: 100px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -55,16 +55,18 @@
       text-decoration: none;
       font-size: 18px;
       font-weight: 500;
-      letter-spacing: 2px;
+      letter-spacing: 0px;
       padding: 0;
       height: 44px;
       display: flex;
       align-items: center;
       justify-content: center;
+      padding-left: 0px;
       width: 100%;
       cursor: pointer;
       background: none;
       transition: color 0.2s;
+
     }
     .home-link-wrap:hover .home-link {
       color: #222;
@@ -74,7 +76,7 @@
       flex: 1;
       color: white;
       font-size: 20px;
-      font-weight: 600;
+      font-weight: normal;
       letter-spacing: 1px;
       display: flex;
       align-items: center;
