--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="utf-8">
-  <title>湖口工作站3D視覺化輔助決策平台</title>
+  <title>水利資訊3D視覺化整合平台</title>
   <link rel="stylesheet" href="https://js.arcgis.com/4.33/esri/themes/light/main.css"/>
   <script src="https://js.arcgis.com/4.33/"></script>
   <link rel="stylesheet" href="style.css">
@@ -99,7 +99,7 @@
     <div class="home-link-wrap">
       <a href="#" class="home-link">首頁</a>
     </div>
-    <div class="header-title">湖口工作站3D視覺化輔助決策平台</div>
+    <div class="header-title">水利資訊3D視覺化整合平台</div>
   </div>
   <div id="viewDiv"></div>
   <script src="main.js"></script>
